--- a/Task2_Project/Task2_Project.vcxproj
+++ b/Task2_Project/Task2_Project.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="PhoneNumbersService.h" />
     <ClInclude Include="PhoneTypesService.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Structures.h" />
@@ -166,6 +167,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="PhoneNumbersService.cpp" />
     <ClCompile Include="PhoneTypeService.cpp" />
     <ClCompile Include="PhoneTypesService.cpp" />
     <ClCompile Include="Task2_Project.cpp" />
