--- a/Task2_Project/Task2_Project.vcxproj.filters
+++ b/Task2_Project/Task2_Project.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="PhoneNumbersService.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CityService.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Task2_Project.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PhoneNumbersService.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CityService.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
