--- a/Task2_Project/Task2_Project.vcxproj.filters
+++ b/Task2_Project/Task2_Project.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="CityService.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CStringService.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Task2_Project.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CityService.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CStringService.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
