--- a/Task_3/PhoneBook/PhoneBook.vcxproj.filters
+++ b/Task_3/PhoneBook/PhoneBook.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CCitiesTable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PhoneBook.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CCitiesTable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
