--- a/Task2_Project/Task2_Project.vcxproj.filters
+++ b/Task2_Project/Task2_Project.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClInclude Include="Structures.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PhoneNumbersService.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="CStringService.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -48,15 +45,15 @@
     <ClInclude Include="PhoneTypeService.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PhoneNumberService.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Task2_Project.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="PhoneNumbersService.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CStringService.cpp">
@@ -69,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PhoneTypeService.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PhoneNumberService.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
