--- a/Task2_Project/Task2_Project.vcxproj
+++ b/Task2_Project/Task2_Project.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PhoneNumberService.h" />
+    <ClInclude Include="PhoneTypeService.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Structures.h" />
     <ClInclude Include="targetver.h" />
@@ -173,6 +174,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="PhoneNumberService.cpp" />
+    <ClCompile Include="PhoneTypeService.cpp" />
     <ClCompile Include="Task2_Project.cpp" />
   </ItemGroup>
   <ItemGroup>
