--- a/Task2_Project/Task2_Project.vcxproj.filters
+++ b/Task2_Project/Task2_Project.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="PhoneNumberService.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PhoneTypeService.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Task2_Project.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PhoneNumberService.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PhoneTypeService.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
