Added new file Structures.h which contains structures for db

--- a/PhoneBook/PhoneBook.vcxproj
+++ b/PhoneBook/PhoneBook.vcxproj
@@ -185,6 +185,7 @@
   <ItemGroup>
     <ClInclude Include="CCitiesTable.h" />
     <ClInclude Include="ChildFrm.h" />
+    <ClInclude Include="Structures.h" />
     <ClInclude Include="CitiesDoc.h" />
     <ClInclude Include="CitiesView.h" />
     <ClInclude Include="framework.h" />
