--- a/PhoneBook/PhoneBook.vcxproj
+++ b/PhoneBook/PhoneBook.vcxproj
@@ -193,6 +193,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="PhoneBook.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="TableArray.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -208,6 +209,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="PhoneBook.cpp" />
+    <ClCompile Include="TableArray.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PhoneBook.rc" />
