--- a/Task2_Project/Task2_Project.vcxproj
+++ b/Task2_Project/Task2_Project.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BaseService.h" />
+    <ClInclude Include="CContainer.h" />
     <ClInclude Include="CityService.h" />
     <ClInclude Include="CStringService.h" />
     <ClInclude Include="framework.h" />
