--- a/Task2_Project/Task2_Project.vcxproj.filters
+++ b/Task2_Project/Task2_Project.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="PhoneTypeService.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CContainer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Task2_Project.cpp">
