--- a/PhoneBook/PhoneBook.vcxproj
+++ b/PhoneBook/PhoneBook.vcxproj
@@ -194,7 +194,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="PhoneBook.h" />
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="CContainer.h" />
+    <ClInclude Include="CSelfClearingTypedPtrArray.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -210,7 +210,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="PhoneBook.cpp" />
-    <ClCompile Include="CContainer.cpp" />
+    <ClCompile Include="CSelfClearingTypedPtrArray.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PhoneBook.rc" />
