--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="CSelfClearingTypedPtrArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CCitiesData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PhoneBook.cpp">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CSelfClearingTypedPtrArray.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CCitiesData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
