--- a/PhoneBook/PhoneBook.vcxproj
+++ b/PhoneBook/PhoneBook.vcxproj
@@ -186,6 +186,7 @@
   <ItemGroup>
     <ClInclude Include="CCitiesData.h" />
     <ClInclude Include="CCitiesDLG.h" />
+    <ClInclude Include="CCitiesDocument.h" />
     <ClInclude Include="CCitiesTable.h" />
     <ClInclude Include="ChildFrm.h" />
     <ClInclude Include="Structures.h" />
@@ -202,6 +203,7 @@
   <ItemGroup>
     <ClCompile Include="CCitiesData.cpp" />
     <ClCompile Include="CCitiesDLG.cpp" />
+    <ClCompile Include="CCitiesDocument.cpp" />
     <ClCompile Include="CCitiesTable.cpp" />
     <ClCompile Include="ChildFrm.cpp" />
     <ClCompile Include="CitiesDoc.cpp" />
