--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -72,7 +72,7 @@
     <ClInclude Include="CPersonsTable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CTable.h">
+    <ClInclude Include="CBaseTable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -122,7 +122,7 @@
     <ClCompile Include="CPersonsTable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CTable.cpp">
+    <ClCompile Include="CBaseTable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
