--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -13,6 +13,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="CITIES">
+      <UniqueIdentifier>{f293e906-386d-421c-b5ff-4cc2f3ca55ee}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="PERSONS">
+      <UniqueIdentifier>{18cfb192-f4d4-47d0-b5b9-723853c9256d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\CITIES">
+      <UniqueIdentifier>{a4b6bc49-f645-4c3c-a8c3-9daed020a70d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\PERSONS">
+      <UniqueIdentifier>{303fe5f4-5a2e-4965-928e-389e08ed815a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PhoneBook.h">
@@ -30,19 +42,10 @@
     <ClInclude Include="ChildFrm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CitiesDoc.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CitiesView.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pch.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CCitiesTable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Structures.h">
@@ -51,29 +54,38 @@
     <ClInclude Include="CSelfClearingTypedPtrArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CCitiesData.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CCitiesDocument.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CCitiesDialog.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CPersonsView.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CPersonsDocument.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CPersonsData.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CPersonsTable.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="CBaseTable.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CCitiesData.h">
+      <Filter>CITIES</Filter>
+    </ClInclude>
+    <ClInclude Include="CCitiesDialog.h">
+      <Filter>CITIES</Filter>
+    </ClInclude>
+    <ClInclude Include="CCitiesDocument.h">
+      <Filter>CITIES</Filter>
+    </ClInclude>
+    <ClInclude Include="CCitiesTable.h">
+      <Filter>CITIES</Filter>
+    </ClInclude>
+    <ClInclude Include="CitiesDoc.h">
+      <Filter>CITIES</Filter>
+    </ClInclude>
+    <ClInclude Include="CitiesView.h">
+      <Filter>CITIES</Filter>
+    </ClInclude>
+    <ClInclude Include="CPersonsData.h">
+      <Filter>PERSONS</Filter>
+    </ClInclude>
+    <ClInclude Include="CPersonsDocument.h">
+      <Filter>PERSONS</Filter>
+    </ClInclude>
+    <ClInclude Include="CPersonsTable.h">
+      <Filter>PERSONS</Filter>
+    </ClInclude>
+    <ClInclude Include="CPersonsView.h">
+      <Filter>PERSONS</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -86,44 +98,44 @@
     <ClCompile Include="ChildFrm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CitiesDoc.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CitiesView.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="pch.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CCitiesTable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CSelfClearingTypedPtrArray.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CCitiesData.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CCitiesDocument.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CCitiesDialog.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CPersonsView.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CPersonsDocument.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CPersonsData.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CPersonsTable.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="CBaseTable.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CCitiesData.cpp">
+      <Filter>Source Files\CITIES</Filter>
+    </ClCompile>
+    <ClCompile Include="CCitiesDialog.cpp">
+      <Filter>Source Files\CITIES</Filter>
+    </ClCompile>
+    <ClCompile Include="CCitiesDocument.cpp">
+      <Filter>Source Files\CITIES</Filter>
+    </ClCompile>
+    <ClCompile Include="CCitiesTable.cpp">
+      <Filter>Source Files\CITIES</Filter>
+    </ClCompile>
+    <ClCompile Include="CitiesDoc.cpp">
+      <Filter>Source Files\CITIES</Filter>
+    </ClCompile>
+    <ClCompile Include="CitiesView.cpp">
+      <Filter>Source Files\CITIES</Filter>
+    </ClCompile>
+    <ClCompile Include="CPersonsData.cpp">
+      <Filter>Source Files\PERSONS</Filter>
+    </ClCompile>
+    <ClCompile Include="CPersonsDocument.cpp">
+      <Filter>Source Files\PERSONS</Filter>
+    </ClCompile>
+    <ClCompile Include="CPersonsTable.cpp">
+      <Filter>Source Files\PERSONS</Filter>
+    </ClCompile>
+    <ClCompile Include="CPersonsView.cpp">
+      <Filter>Source Files\PERSONS</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
