--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -87,6 +87,12 @@
     <ClInclude Include="CPersonsView.h">
       <Filter>PERSONS</Filter>
     </ClInclude>
+    <ClInclude Include="PersonsView.h">
+      <Filter>PERSONS</Filter>
+    </ClInclude>
+    <ClInclude Include="CBaseView.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PhoneBook.cpp">
@@ -136,6 +142,12 @@
     </ClCompile>
     <ClCompile Include="CPersonsView.cpp">
       <Filter>Source Files\PERSONS</Filter>
+    </ClCompile>
+    <ClCompile Include="PersonsView.cpp">
+      <Filter>Source Files\PERSONS</Filter>
+    </ClCompile>
+    <ClCompile Include="CBaseView.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
