--- a/PhoneBook/PhoneBook.vcxproj
+++ b/PhoneBook/PhoneBook.vcxproj
@@ -195,6 +195,7 @@
     <ClInclude Include="CPersonsDocument.h" />
     <ClInclude Include="CPersonsTable.h" />
     <ClInclude Include="CPersonsView.h" />
+    <ClInclude Include="Enumerations.h" />
     <ClInclude Include="PersonsView.h" />
     <ClInclude Include="Structures.h" />
     <ClInclude Include="CitiesDoc.h" />
