--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="Enumerations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GlobalConstants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PhoneBook.cpp">
@@ -150,6 +153,9 @@
       <Filter>Source Files\PERSONS</Filter>
     </ClCompile>
     <ClCompile Include="CBaseView.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GlobalConstants.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
