Add new class which will validate all text fields values

--- a/PhoneBook/PhoneBook.vcxproj
+++ b/PhoneBook/PhoneBook.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="CSelfClearingTypedPtrArray.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TextValidator.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CBaseTable.cpp" />
@@ -234,6 +235,7 @@
     <ClCompile Include="PersonsView.cpp" />
     <ClCompile Include="PhoneBook.cpp" />
     <ClCompile Include="CSelfClearingTypedPtrArray.cpp" />
+    <ClCompile Include="TextValidator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PhoneBook.rc" />
