--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -99,7 +99,7 @@
     <ClInclude Include="GlobalConstants.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="TextValidator.h">
+    <ClInclude Include="DataValidator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -161,7 +161,7 @@
     <ClCompile Include="GlobalConstants.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TextValidator.cpp">
+    <ClCompile Include="DataValidator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
