--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="DataValidator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CPersonsView.h">
+      <Filter>PERSONS</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PhoneBook.cpp">
