--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClInclude Include="CPersonsDialog.h">
       <Filter>PERSONS</Filter>
     </ClInclude>
+    <ClInclude Include="CPhoneNumbersTable.h">
+      <Filter>PHONE_NUMERS</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PhoneBook.cpp">
@@ -178,6 +181,9 @@
     </ClCompile>
     <ClCompile Include="CPersonsDialog.cpp">
       <Filter>Source Files\PERSONS</Filter>
+    </ClCompile>
+    <ClCompile Include="CPhoneNumbersTable.cpp">
+      <Filter>Source Files\PHONE_NUMBERS</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
