--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClInclude Include="CPhoneNumbersTable.h">
       <Filter>PHONE_NUMERS</Filter>
     </ClInclude>
+    <ClInclude Include="CPhoneNumbersData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PhoneBook.cpp">
@@ -184,6 +187,9 @@
     </ClCompile>
     <ClCompile Include="CPhoneNumbersTable.cpp">
       <Filter>Source Files\PHONE_NUMBERS</Filter>
+    </ClCompile>
+    <ClCompile Include="CPhoneNumbersData.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
