--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -121,7 +121,7 @@
       <Filter>PHONE_NUMERS</Filter>
     </ClInclude>
     <ClInclude Include="CPhoneNumbersData.h">
-      <Filter>Header Files</Filter>
+      <Filter>PHONE_NUMERS</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -189,7 +189,7 @@
       <Filter>Source Files\PHONE_NUMBERS</Filter>
     </ClCompile>
     <ClCompile Include="CPhoneNumbersData.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\PHONE_NUMBERS</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
