--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -123,6 +123,12 @@
     <ClInclude Include="CPhoneNumbersData.h">
       <Filter>PHONE_NUMERS</Filter>
     </ClInclude>
+    <ClInclude Include="DbConnector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ErrorVisualizator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PhoneBook.cpp">
@@ -190,6 +196,12 @@
     </ClCompile>
     <ClCompile Include="CPhoneNumbersData.cpp">
       <Filter>Source Files\PHONE_NUMBERS</Filter>
+    </ClCompile>
+    <ClCompile Include="DbConnector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ErrorVisualizator.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
