--- a/PhoneBook/PhoneBook.vcxproj
+++ b/PhoneBook/PhoneBook.vcxproj
@@ -200,7 +200,7 @@
     <ClInclude Include="CitiesDataValidator.h" />
     <ClInclude Include="CPhoneNumbersData.h" />
     <ClInclude Include="CPhoneNumbersTable.h" />
-    <ClInclude Include="DbConnector.h" />
+    <ClInclude Include="DataBaseConnector.h" />
     <ClInclude Include="DialogWindowEnumeration.h" />
     <ClInclude Include="Enumerations.h" />
     <ClInclude Include="ErrorVisualizator.h" />
@@ -235,7 +235,7 @@
     <ClCompile Include="CitiesDataValidator.cpp" />
     <ClCompile Include="CPhoneNumbersData.cpp" />
     <ClCompile Include="CPhoneNumbersTable.cpp" />
-    <ClCompile Include="DbConnector.cpp" />
+    <ClCompile Include="DataBaseConnector.cpp" />
     <ClCompile Include="ErrorVisualizator.cpp" />
     <ClCompile Include="GlobalConstants.cpp" />
     <ClCompile Include="MainFrm.cpp" />
