--- a/PhoneBook/PhoneBook.vcxproj
+++ b/PhoneBook/PhoneBook.vcxproj
@@ -190,6 +190,7 @@
     <ClInclude Include="CCitiesDialog.h" />
     <ClInclude Include="CCitiesDocument.h" />
     <ClInclude Include="CCitiesTable.h" />
+    <ClInclude Include="CPhoneTypesTable.h" />
     <ClInclude Include="CTableAccessor.h" />
     <ClInclude Include="ChildFrm.h" />
     <ClInclude Include="CPersonsData.h" />
@@ -235,6 +236,7 @@
     <ClCompile Include="CitiesDataValidator.cpp" />
     <ClCompile Include="CPhoneNumbersData.cpp" />
     <ClCompile Include="CPhoneNumbersTable.cpp" />
+    <ClCompile Include="CPhoneTypesTable.cpp" />
     <ClCompile Include="DataBaseConnector.cpp" />
     <ClCompile Include="ErrorVisualizator.cpp" />
     <ClCompile Include="GlobalConstants.cpp" />
