--- a/PhoneBook/PhoneBook.vcxproj.filters
+++ b/PhoneBook/PhoneBook.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClInclude Include="SqlQueries.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CPhoneNumbersDialog.h">
+      <Filter>PHONE_NUMERS</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PhoneBook.cpp">
@@ -232,6 +235,9 @@
     </ClCompile>
     <ClCompile Include="SqlQueries.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CPhoneNumbersDialog.cpp">
+      <Filter>Source Files\PHONE_NUMBERS</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
